@@ -170,13 +170,16 @@ namespace Mono.TextEditor
 		public static void GetSelectedLines (TextEditorData data, out int startLineNr, out int endLineNr)
 		{
 			if (data.IsSomethingSelected) {
+				DocumentLocation start, end;
 				if (data.MainSelection.Anchor < data.MainSelection.Lead) {
-					startLineNr = data.MainSelection.Anchor.Line;
-					endLineNr = data.MainSelection.Lead.Column == 0 ? data.MainSelection.Lead.Line - 1 : data.MainSelection.Lead.Line;
+					start = data.MainSelection.Anchor;
+					end = data.MainSelection.Lead;
 				} else {
-					startLineNr = data.MainSelection.Lead.Line;
-					endLineNr = data.MainSelection.Anchor.Line;
+					start = data.MainSelection.Lead;
+					end = data.MainSelection.Anchor;
 				}
+				startLineNr = start.Line;
+				endLineNr = end.Column == 0 ? end.Line - 1 : end.Line;
 			} else {
 				startLineNr = endLineNr = data.Caret.Line;
 			}
